crates/piper-protocol/tests/ui/from_exact_too_long.rs
fn main() {
    let _ = piper_protocol::frame::CanData::from_exact([0u8; 9]);
}
